--- a/views/updateprofile.ejs
+++ b/views/updateprofile.ejs
@@ -11,7 +11,7 @@
 <body>
   <main class="container">
     <header>
-      <h1>👤 Update Your Profile</h1>
+      <h1>👤 Welcome Buddy! </h1>
       <p class="subtext">
         Keep your profile details accurate so we can better personalize your experience and stay in touch with you.
       </p>
@@ -39,8 +39,8 @@
 
     <section class="form-section">
       <form id="userForm">
-        <input type="text" id="name" placeholder="Your Name" "name" required />
-        <input type="email" id="email" name="email" placeholder="Your email" required />
+        <input type="text" id="progress" placeholder="Your Progress" name="progress" required />
+        <input type="text" id="badges" name="badges" placeholder="Your Badges" required />
         <a href="./dashboard">
           <button type="button">Submit</button>
         </a>
